[tool.poetry]
name = "openai-entity-gym"
version = "0.1.0"
description = ""
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
gym = "^0.25.2"
enn-trainer = "^0.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
